Added new operations; Added tutorial template for MapD;

--- a/notebooks/IbisMapD.ipynb
+++ b/notebooks/IbisMapD.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "<ibis.mapd.client.MapDClient at 0x7f72aaac4eb8>"
+       "<ibis.mapd.client.MapDClient at 0x7f75bf0457b8>"
       ]
      },
      "execution_count": 4,
@@ -555,7 +555,24 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT\n",
+      "  CASE \"flight_dayofweek\"\n",
+      "    WHEN 6 THEN 'w6'\n",
+      "    WHEN 4 THEN 'w4'\n",
+      "    WHEN 2 THEN 'w2'\n",
+      "    WHEN 0 THEN 'w0'\n",
+      "    ELSE 'w1'\n",
+      "  END AS num\n",
+      "FROM mapd.flights_2008_10k\n",
+      "LIMIT 10\n"
+     ]
+    }
+   ],
    "source": [
     "expr = (\n",
     "    t.flight_dayofweek\n",
@@ -569,7 +586,8 @@
     "        .name('num')\n",
     ")\n",
     "# https://github.com/ibis-project/ibis/issues/1412\n",
-    "# print(t[expr].limit(10).compile())"
+    "print(t[expr].limit(10).compile())\n",
+    "t[expr].limit(10).execute();"
    ]
   },
   {
@@ -703,7 +721,7 @@
     "    print('='*80)\n",
     "    # test expression\n",
     "    expr.execute()\n",
-    "    print(expr.compile())"
+    "    print('%s:' % name, expr.compile())"
    ]
   },
   {
@@ -723,22 +741,22 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "SELECT \"taxiin\" + 1 AS tmp\n",
+      "+: SELECT \"taxiin\" + 1 AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT \"taxiin\" - 2 AS tmp\n",
+      "-: SELECT \"taxiin\" - 2 AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT \"taxiin\" * 3 AS tmp\n",
+      "*: SELECT \"taxiin\" * 3 AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT \"taxiin\" / 4 AS tmp\n",
+      "/: SELECT \"taxiin\" / 4 AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT power(\"taxiin\", 5) AS tmp\n",
+      "**: SELECT power(\"taxiin\", 5) AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT power(\"taxiin\", 6) AS tmp\n",
+      "pow: SELECT power(\"taxiin\", 6) AS tmp\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
@@ -769,43 +787,43 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "SELECT abs(\"taxiin\") AS tmp\n",
+      "abs: SELECT abs(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT ceil(\"taxiin\") AS tmp\n",
+      "ceil: SELECT ceil(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT degrees(\"taxiin\") AS tmp\n",
+      "degrees: SELECT degrees(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT exp(\"taxiin\") AS tmp\n",
+      "exp: SELECT exp(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT floor(\"taxiin\") AS tmp\n",
+      "floor: SELECT floor(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT log(\"taxiin\") AS tmp\n",
+      "log: SELECT log(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT ln(\"taxiin\") AS tmp\n",
+      "ln: SELECT ln(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT log10(\"taxiin\") AS tmp\n",
+      "log10: SELECT log10(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT mod(\"taxiin\", 2) AS tmp\n",
+      "mod: SELECT mod(\"taxiin\", 2) AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT power(\"taxiin\", 2) AS tmp\n",
+      "pow: SELECT power(\"taxiin\", 2) AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT radians(\"taxiin\") AS tmp\n",
+      "radians: SELECT radians(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT sqrt(\"taxiin\") AS tmp\n",
+      "sqrt: SELECT sqrt(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT truncate(\"taxiin\", 16) AS tmp\n",
+      "truncate: SELECT truncate(\"taxiin\", 16) AS tmp\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
@@ -820,7 +838,7 @@
     "compile_op('ln', t['taxiin'].ln())\n",
     "compile_op('log10', t['taxiin'].log10())\n",
     "compile_op('mod', t['taxiin'].mod(2))\n",
-    "# compile_op('pi()', t[t['taxiin'] * ibis.pi()])  # MapD function\n",
+    "#compile_op('pi()', t[t['taxiin'] * ibis.mapd.pi])  # MapD function\n",
     "compile_op('pow', t['taxiin'].pow(2))\n",
     "compile_op('radians', t['taxiin'].radians())  # MapD function\n",
     "# compile_op('round', t['taxiin'].round(2))  # MapD round is not working yet\n",
@@ -828,6 +846,13 @@
     "compile_op('sqrt', t['taxiin'].sqrt())\n",
     "compile_op('truncate', t['taxiin'].truncate(16))  # MapD function\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -846,16 +871,16 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "SELECT avg(\"taxiin\") AS v\n",
+      "avg: SELECT avg(\"taxiin\") AS v\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT max(\"taxiin\") AS v\n",
+      "max: SELECT max(\"taxiin\") AS v\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT min(\"taxiin\") AS v\n",
+      "min: SELECT min(\"taxiin\") AS v\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT count(\"taxiin\") AS v\n",
+      "count: SELECT count(\"taxiin\") AS v\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
@@ -868,6 +893,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -878,29 +910,83 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "correlation/corr: SELECT CORR(\"taxiin\", \"taxiout\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "correlation_float/corr_float: SELECT CORR_FLOAT(\"taxiin\", \"dest_lat\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "stddev: SELECT STDDEV_SAMP(\"arrdelay\") AS std\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "stddev_float: SELECT STDDEV_SAMP_FLOAT(\"dest_lat\") AS std\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "stddev_pop: SELECT STDDEV_POP(\"taxiin\") AS std\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "stddev_pop_float: SELECT STDDEV_POP_FLOAT(\"dest_lat\") AS std\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "stddev_samp: SELECT STDDEV_SAMP(\"taxiin\") AS std\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "stddev_samp_float: SELECT STDDEV_SAMP_FLOAT(\"dest_lat\") AS std\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "variance: SELECT VAR_SAMP(\"taxiin\") AS var\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "variance_float: SELECT VAR_SAMP(\"taxiin\") AS var\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "var_pop: SELECT VAR_POP(\"taxiin\") AS var\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "var_pop_float: SELECT VAR_POP(\"taxiin\") AS var\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "var_samp: SELECT VAR_SAMP(\"taxiin\") AS var\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "var_samp_float: SELECT VAR_SAMP(\"taxiin\") AS var\n",
+      "FROM mapd.flights_2008_10k\n"
+     ]
+    }
+   ],
    "source": [
-    "# compile_op('correlation', t['taxiin'].correlation(t['taxiout']))\n",
-    "# compile_op('correlation_float', t['taxiin'].correlation_float(t['taxiout']))\n",
-    "# compile_op('corr', t['taxiin'].corr(t['taxiout']))\n",
-    "# compile_op('corr_float', t['taxiin'].corr_float(t['taxiout']))\n",
+    "compile_op('correlation/corr', t['taxiin'].corr(t['taxiout']))\n",
+    "compile_op('correlation_float/corr_float', t['taxiin'].corr(t['dest_lat']))\n",
     "# compile_op('covar_pop', t['taxiin'].covar_pop(t['taxiout']))\n",
     "# compile_op('covar_pop_float', t['taxiin'].covar_pop_float(t['taxiout']))\n",
     "# compile_op('covar_samp', t['taxiin'].covar_samp(t['taxiout']))\n",
     "# compile_op('covar_samp_float', t['taxiin'].covar_samp_float(t['taxiout']))\n",
-    "# compile_op('stddev', t['arrdelay'].std())\n",
-    "# compile_op('stddev_float', t['taxiin'].stddev_float())\n",
-    "# compile_op('stddev_pop', t['taxiin'].stddev_pop())\n",
-    "# compile_op('stddev_pop_float', t['taxiin'].stddev_pop_float())\n",
-    "# compile_op('stddev_samp', t['taxiin'].stddev_samp())\n",
-    "# compile_op('stddev_samp_float', t['taxiin'].stddev_samp_float())\n",
-    "# compile_op('variance', t['taxiin'].variance())\n",
-    "# compile_op('variance_float', t['taxiin'].variance_float())\n",
-    "# compile_op('var_pop', t['taxiin'].var_pop())\n",
-    "# compile_op('var_pop_float', t['taxiin'].var_pop_float())\n",
-    "# compile_op('var_samp', t['taxiin'].var_samp())\n",
-    "# compile_op('var_samp_float', t['taxiin'].var_samp_float())"
+    "compile_op('stddev', t['arrdelay'].std())\n",
+    "compile_op('stddev_float', t['dest_lat'].std())\n",
+    "compile_op('stddev_pop', t['taxiin'].std(how='pop'))\n",
+    "compile_op('stddev_pop_float', t['dest_lat'].std(how='pop'))\n",
+    "compile_op('stddev_samp', t['taxiin'].std(how='sample'))  # alias for stddev\n",
+    "compile_op('stddev_samp_float', t['dest_lat'].std(how='sample'))  # alias for stddev_float\n",
+    "compile_op('variance', t['taxiin'].var())\n",
+    "compile_op('variance_float', t['taxiin'].var())\n",
+    "compile_op('var_pop', t['taxiin'].var(how='pop'))\n",
+    "compile_op('var_pop_float', t['taxiin'].var(how='pop'))\n",
+    "compile_op('var_samp', t['taxiin'].var(how='sample'))  # alias for variance\n",
+    "compile_op('var_samp_float', t['taxiin'].var(how='sample'))  # alias for variance_float"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -937,28 +1023,28 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "SELECT acos(\"taxiin\") AS tmp\n",
+      "acos: SELECT acos(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT asin(\"taxiin\") AS tmp\n",
+      "asin: SELECT asin(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT atan(\"taxiin\") AS tmp\n",
+      "atan: SELECT atan(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT acos(\"taxiin\") AS tmp\n",
+      "atan2: SELECT acos(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT cos(\"taxiin\") AS tmp\n",
+      "cos: SELECT cos(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT cot(\"taxiin\") AS tmp\n",
+      "cot: SELECT cot(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT sin(\"taxiin\") AS tmp\n",
+      "sin: SELECT sin(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT tan(\"taxiin\") AS tmp\n",
+      "tan: SELECT tan(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
@@ -991,13 +1077,13 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "SELECT distance_in_meters(\"origin_lon\", \"origin_lat\", \"dest_lon\", \"dest_lat\") AS tmp\n",
+      "distance_in_meters: SELECT distance_in_meters(\"origin_lon\", \"origin_lat\", \"dest_lon\", \"dest_lat\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT conv_4326_900913_x(\"taxiin\") AS tmp\n",
+      "conv_4326_900913_x: SELECT conv_4326_900913_x(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "SELECT conv_4326_900913_y(\"taxiin\") AS tmp\n",
+      "conv_4326_900913_y: SELECT conv_4326_900913_y(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
@@ -1019,15 +1105,26 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "like: SELECT \"dest_name\" like 'L%' AS tmp\n",
+      "FROM mapd.flights_2008_10k\n"
+     ]
+    }
+   ],
    "source": [
     "# compile_op('charlenght', t['dest_name'].len())\n",
     "# compile_op('length', t['dest_name'].len(output=`bytes`))\n",
-    "# compile_op('like', t['dest_name'].like('L*'))\n",
-    "# compile_op('like', t['dest_name'].not_like('L*'))\n",
-    "# compile_op('like', t['dest_name'].ilike('L*'))\n",
-    "# compile_op('like', t['dest_name'].regexp('L*'))\n",
-    "# compile_op('like', t['dest_name'].regexp_like('L*'))"
+    "compile_op('like', t['dest_name'].like('L%'))\n",
+    "# compile_op('like', t['dest_name'].length())\n",
+    "#compile_op('not_like', t['dest_name'].not_like('L*'))\n",
+    "#compile_op('ilike', t['dest_name'].ilike('L*'))\n",
+    "# compile_op('regexp', t['dest_name'].regex('L*'))\n",
+    "# compile_op('regexp_like', t['dest_name'].regexp_like('L*'))"
    ]
   },
   {
@@ -1052,13 +1149,6 @@
     "# compile_op('datediff', t['taxiin'].datediff())\n",
     "# compile_op('dateadd', t['taxiin'].dateadd())\n",
     "# compile_op('datepart', t['taxiin'].datepart())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## DDL"
    ]
   }
  ],
