Resolves ibis #1418 and resolves #893

--- a/notebooks/IbisMapD.ipynb
+++ b/notebooks/IbisMapD.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "<ibis.mapd.client.MapDClient at 0x7f75bf0457b8>"
+       "<ibis.mapd.client.MapDClient at 0x7f40ab56eb00>"
       ]
      },
      "execution_count": 4,
@@ -725,6 +725,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_num = ibis.literal(1)\n",
+    "v_str = ibis.literal('abcde')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -733,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -814,6 +824,9 @@
       "mod: SELECT mod(\"taxiin\", 2) AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
+      "pi(): SELECT \"taxiin\", PI() AS pi\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
       "pow: SELECT power(\"taxiin\", 2) AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
@@ -838,13 +851,13 @@
     "compile_op('ln', t['taxiin'].ln())\n",
     "compile_op('log10', t['taxiin'].log10())\n",
     "compile_op('mod', t['taxiin'].mod(2))\n",
-    "#compile_op('pi()', t[t['taxiin'] * ibis.mapd.pi])  # MapD function\n",
+    "compile_op('pi()', t[t['taxiin'], ibis.pi])  # MapD function\n",
     "compile_op('pow', t['taxiin'].pow(2))\n",
     "compile_op('radians', t['taxiin'].radians())  # MapD function\n",
     "# compile_op('round', t['taxiin'].round(2))  # MapD round is not working yet\n",
     "# compile_op('sign', t['taxiin'].sign())\n",
     "compile_op('sqrt', t['taxiin'].sqrt())\n",
-    "compile_op('truncate', t['taxiin'].truncate(16))  # MapD function\n"
+    "compile_op('truncate', t['taxiin'].truncate(16))  # MapD function"
    ]
   },
   {
@@ -863,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -893,13 +906,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -908,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -997,25 +1003,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SELECT sin(1) AS tmp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "num = ibis.literal(1)\n",
-    "print(ibis.mapd.compile(num.sin()))"
+    "v_num = ibis.literal(1)\n",
+    "v_str = ibis.literal('abcde')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1030,7 @@
       "atan: SELECT atan(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "atan2: SELECT acos(\"taxiin\") AS tmp\n",
+      "atan2: SELECT atan2(\"taxiin\", 1) AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "cos: SELECT cos(\"taxiin\") AS tmp\n",
@@ -1053,7 +1051,7 @@
     "compile_op('acos', t['taxiin'].acos())\n",
     "compile_op('asin', t['taxiin'].asin())\n",
     "compile_op('atan', t['taxiin'].atan())\n",
-    "compile_op('atan2', t['taxiin'].acos())\n",
+    "compile_op('atan2', t['taxiin'].atan2(1))\n",
     "compile_op('cos', t['taxiin'].cos())\n",
     "compile_op('cot', t['taxiin'].cot())\n",
     "compile_op('sin', t['taxiin'].sin())\n",
@@ -1069,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1111,14 +1109,17 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
+      "charlenght: SELECT *, CHAR_LENGTH('abcde') AS v\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
       "like: SELECT \"dest_name\" like 'L%' AS tmp\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
    ],
    "source": [
-    "# compile_op('charlenght', t['dest_name'].len())\n",
-    "# compile_op('length', t['dest_name'].len(output=`bytes`))\n",
+    "compile_op('charlenght', t[t, v_str.length().name('v')])\n",
+    "# compile_op('length', t[t, v_str.length(rtype='bites').name('v')])\n",
     "compile_op('like', t['dest_name'].like('L%'))\n",
     "# compile_op('like', t['dest_name'].length())\n",
     "#compile_op('not_like', t['dest_name'].not_like('L*'))\n",
@@ -1136,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
