Updated notebooks 1 and 2

--- a/notebooks/IbisMapD.ipynb
+++ b/notebooks/IbisMapD.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "<ibis.mapd.client.MapDClient at 0x7ff2042a79b0>"
+       "<ibis.mapd.client.MapDClient at 0x7fdde24d7240>"
       ]
      },
      "execution_count": 4,
@@ -902,7 +902,7 @@
       "mod: SELECT mod(\"taxiin\", 2) AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "pi(): SELECT \"taxiin\", PI() AS pi\n",
+      "pi(): SELECT \"taxiin\", pi() AS pi\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "pow: SELECT power(\"taxiin\", 2) AS tmp\n",
@@ -911,11 +911,16 @@
       "radians: SELECT radians(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
+      "sign: SELECT SIGN(\"taxiin\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
       "sqrt: SELECT sqrt(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "truncate: SELECT truncate(\"taxiin\", 16) AS tmp\n",
-      "FROM mapd.flights_2008_10k\n"
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "Exception: Function ROUND not supported\n"
      ]
     }
    ],
@@ -929,13 +934,16 @@
     "compile_op('ln', t['taxiin'].ln())\n",
     "compile_op('log10', t['taxiin'].log10())\n",
     "compile_op('mod', t['taxiin'].mod(2))\n",
-    "compile_op('pi()', t[t['taxiin'], ibis.pi])  # MapD function\n",
+    "compile_op('pi()', t[t['taxiin'], ibis.pi.name('pi')])  # MapD function\n",
     "compile_op('pow', t['taxiin'].pow(2))\n",
     "compile_op('radians', t['taxiin'].radians())  # MapD function\n",
-    "# compile_op('round', t['taxiin'].round(2))  # MapD round is not working yet\n",
-    "# compile_op('sign', t['taxiin'].sign())\n",
+    "compile_op('sign', t['taxiin'].sign())\n",
     "compile_op('sqrt', t['taxiin'].sqrt())\n",
-    "compile_op('truncate', t['taxiin'].truncate(16))  # MapD function"
+    "compile_op('truncate', t['taxiin'].truncate(16))  # MapD function\n",
+    "try:\n",
+    "    compile_op('round', t['taxiin'].round(2))  # MapD round is not working yet\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -1106,7 +1114,7 @@
       "atan: SELECT atan(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "atan2: SELECT atan2(\"taxiin\", 1) AS tmp\n",
+      "atan2: SELECT atan2(\"taxiin\", \"taxiout\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "cos: SELECT cos(\"taxiin\") AS tmp\n",
@@ -1127,7 +1135,7 @@
     "compile_op('acos', t['taxiin'].acos())\n",
     "compile_op('asin', t['taxiin'].asin())\n",
     "compile_op('atan', t['taxiin'].atan())\n",
-    "compile_op('atan2', t['taxiin'].atan2(1))\n",
+    "compile_op('atan2', t['taxiin'].atan2(t['taxiout']))\n",
     "compile_op('cos', t['taxiin'].cos())\n",
     "compile_op('cot', t['taxiin'].cot())\n",
     "compile_op('sin', t['taxiin'].sin())\n",
@@ -1185,7 +1193,7 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "charlenght: SELECT *, CHAR_LENGTH('abcde') AS v\n",
+      "charlenght: SELECT *, char_length('abcde') AS v\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "like: SELECT \"dest_name\" like 'L%' AS tmp\n",
