--- a/notebooks/ibis/1-Intro-and-Setup.ipynb
+++ b/notebooks/ibis/1-Intro-and-Setup.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Impala/HDFS intro and Setup"
+    "# PyMapD intro and Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This tutorial is based on https://github.com/ibis-project/ibis/tree/master/docs/source/notebooks/tutorial"
    ]
   },
   {
@@ -23,53 +30,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ibis\n",
-    "import os"
+    "import ibis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you have WebHDFS available, connect to HDFS with according to your WebHDFS config. For kerberized or more complex HDFS clusters please look at http://hdfscli.readthedocs.org/en/latest/ for info on connecting. You can use a connection from that library instead of using `hdfs_connect`"
+    "To connect to `MapD` database, use `connect` method from `ibis.mapd` module."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdfs_port = os.environ.get('IBIS_WEBHDFS_PORT', 50070)\n",
-    "hdfs = ibis.hdfs_connect(host='quickstart.cloudera', port=hdfs_port)"
+    "con = ibis.mapd.connect(\n",
+    "    host='localhost', user='mapd', password='HyperInteractive',\n",
+    "    port=9091, dbname='mapd'\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, create the Ibis client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "con = ibis.impala.connect('quickstart.cloudera', hdfs_client=hdfs)\n",
-    "con"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Obviously, substitute the parameters that are appropriate for your environment (see docstring for `ibis.impala.connect`). `impala.connect` uses the same parameters as Impyla's (https://pypi.python.org/pypi/impyla) DBAPI interface"
+    "Obviously, substitute the parameters that are appropriate for your environment (see docstring for `ibis.mapd.connect`). `mapd.connect` uses the same parameters as pymapd's (https://pypi.python.org/pypi/pymapd) DBAPI interface"
    ]
   }
  ],
@@ -89,9 +80,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
