--- a/notebooks/ibis/3-Projection-Join-Sort.ipynb
+++ b/notebooks/ibis/3-Projection-Join-Sort.ipynb
@@ -16,19 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "import ibis\n",
-    "import os\n",
-    "hdfs_port = os.environ.get('IBIS_WEBHDFS_PORT', 50070)\n",
-    "hdfs = ibis.hdfs_connect(host='quickstart.cloudera', port=hdfs_port)\n",
-    "con = ibis.impala.connect(host='quickstart.cloudera', database='ibis_testing',\n",
-    "                          hdfs_client=hdfs)\n",
-    "print('Hello!')"
+    "con = ibis.mapd.connect(\n",
+    "    host='localhost', user='mapd', password='HyperInteractive',\n",
+    "    port=9091, dbname='mapd'\n",
+    ")"
    ]
   },
   {
@@ -176,10 +174,7 @@
    "source": [
     "## Joins\n",
     "\n",
-    "Ibis attempts to provide good support for all the standard relational joins supported by Impala, Hive, and other relational databases.\n",
-    "\n",
-    "- inner, outer, left, right joins\n",
-    "- semi and anti-joins\n",
+    "MapD backedn provides support for inner `join` and `left join`\n",
     "\n",
     "To illustrate the joins we'll use the TPC-H tables for now"
    ]
@@ -506,9 +501,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
