Added distinct count operation;

--- a/notebooks/IbisMapD.ipynb
+++ b/notebooks/IbisMapD.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "<ibis.mapd.client.MapDClient at 0x7fdde24d7240>"
+       "<ibis.mapd.client.MapDClient at 0x7f7ee1f6c0b8>"
       ]
      },
      "execution_count": 4,
@@ -972,7 +972,13 @@
       "min: SELECT min(\"taxiin\") AS v\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "count: SELECT count(\"taxiin\") AS v\n",
+      "count table: SELECT count(*) AS v\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "count column: SELECT count(\"taxiin\") AS v\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "distinct count: SELECT count(DISTINCT \"taxiin\") AS v\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
@@ -981,7 +987,10 @@
     "compile_op('avg', t['taxiin'].mean().name('v'))\n",
     "compile_op('max', t['taxiin'].max().name('v'))\n",
     "compile_op('min', t['taxiin'].min().name('v'))\n",
-    "compile_op('count', t['taxiin'].count().name('v'))"
+    "compile_op('count table', t.count().name('v'))\n",
+    "compile_op('count column', t['taxiin'].count().name('v'))\n",
+    "compile_op('distinct count', t['taxiin'].distinct().count().name('v'))\n",
+    "# compile_op('distinct count', t['taxiin'].distinct().count(approx=10).name('v'))"
    ]
   },
   {
@@ -1344,6 +1353,71 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "year: SELECT EXTRACT(YEAR FROM \"arr_timestamp\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "month: SELECT EXTRACT(MONTH FROM \"arr_timestamp\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "day: SELECT EXTRACT(DAY FROM \"arr_timestamp\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "hour: SELECT EXTRACT(HOUR FROM \"arr_timestamp\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "minute: SELECT EXTRACT(MINUTE FROM \"arr_timestamp\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "second: SELECT EXTRACT(SECOND FROM \"arr_timestamp\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SOME DIRECT EXTRACT OPERATIONS \n",
+    "compile_op('year', t['arr_timestamp'].year())\n",
+    "compile_op('month', t['arr_timestamp'].month())\n",
+    "compile_op('day', t['arr_timestamp'].day())\n",
+    "compile_op('hour', t['arr_timestamp'].hour())\n",
+    "compile_op('minute', t['arr_timestamp'].minute())\n",
+    "compile_op('second', t['arr_timestamp'].second())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NotImplemented\n"
+     ]
+    }
+   ],
+   "source": [
+    "for date_part in (\n",
+    "    'YEAR', 'QUARTER', 'MONTH', 'DAYOFYEAR', 'DAY', 'WEEK', 'WEEKDAY', 'HOUR',\n",
+    "    'MINUTE', 'SECOND', 'MILLISECOND'\n",
+    "):\n",
+    "    pass\n",
+    "\n",
+    "print(t['arr_timestamp'].add(1))\n",
+    "# print('INTERVAL', (ibis.now() - ibis.year('3')).compile())\n",
+    "# compile_op('INTERVAL', (ibis.now() - ibis.year()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
